# autocertify-backend

./: .breakpoints  .replit  Procfile  README.md  clean.py  database.py  email_login.py  process.py  pyproject.toml  requirements.txt  send.py  sheet.xlsx  upload.py
api/: .gitignore  clean.py  create_report.py  database.py  email_login.py  mark_stage.py  process.py  send.py  upload.py  worker.py  wsgi.py
api/clean/: __init__.py
api/frontend/: __init__.py
api/send/: __init__.py
api/upload/: __init__.py
autocertify/api/: clean.py  database.py  frontend.py  process.py  send.py
