[tool.poetry]
name = "repl_python3_AutoCertify"
version = "0.1.0"
description = ""
authors = ["SanketKhadse <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
cloudinary = "^1.28.0"
Flask = "^2.0.2"
pandas = "^1.3.5"
pymongo = "^4.0.1"
python-decouple = "^3.5"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
